--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
+    "@types/node": "^22.10.10",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "readline": "^1.3.0"
   }
 }
